<resources>
    <string name="app_name" translatable="false">SafePass</string>
    <string name="main_menu">Password list</string>
    <string name="new_password">New Password</string>
    <string name="nickname">Nickname</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="generate_password">Generate password</string>
    <string name="size">Size</string>
    <string name="uppercase">Uppercase</string>
    <string name="lowercase">Lowercase</string>
    <string name="symbols">Symbols</string>
    <string name="numbers">Numbers</string>
    <string name="login_button">Login</string>
    <string name="new_password_greet">Create a <u><b>master password</b></u> which will be used to access your <font color="#0000FF">password database</font></string>
    <string name="new_password_notforget">It\'s very important that you keep this password in a safe place</string>
    <string name="new_password_confirm">Confirm password</string>
    <string name="biometric_access"><u>Biometric login</u></string>
    <string name="masterPWD_created">Master password created successfully</string>
    <string name="matching_passwords_error">Passwords do not match</string>
    <string name="masterPWD_error">Incorrect password</string>
    <string name="login_text">Enter master password to unlock database</string>
    <string name="menuItem_addPassword">Create new password</string>
    <string name="menuItem_lock">Lock database</string>
    <string name="menuItem_settings">Configuration</string>
    <string name="menuItem_recycleBin">Recycle bin</string>
    <string name="database_locked">Database created successfully</string>
    <string name="biometric_title">Biometric Authentication</string>
    <string name="biometric_subtitle">Use your fingerprint to unlock the database</string>
    <string name="toolbar_unlockDB">Unlock Database</string>
    <string name="toolbar_addPassword">Add password</string>
    <string name="toolbar_generatePassword">Generate password</string>
    <string name="toolbar_settingsScreen">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="error_checkboxes">You must check at least one option</string>
    <string name="error_size">Password size must be between 4 and 64 characters long</string>
    <string name="error_size_empty">Size cannot be empty</string>
    <string name="hint_generated_password">Generated password</string>
    <string name="error_empty_nickname">Nickname cannot be empty</string>
    <string name="error_empty_password">Password cannot be empty</string>
    <string name="menuItem_search">Search</string>
    <string name="no_passwords_add_hint">To add a new password press the \"+\" on the top</string>
    <string name="toolbar_edit_password">Edit password</string>
    <string name="toast_edited_password">Password edited</string>
    <string name="toast_deleted_password">Password sent to recycle bin</string>
    <string name="toast_created_password">Password created</string>
    <string name="toast_created_press_exit">Press again to exit</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="options">Options</string>
    <string name="toolbar_cropTitle">Crop image</string>
    <string name="settings_header_general">General</string>
    <string name="settings_title_automaticLogin">Automatic login</string>
    <string name="settings_title_automaticLogin_time">Automatic login time frame</string>
    <string name="settings_title_changeMasterPWD"><font color="#FF0000">Change master password</font></string>
    <string name="settings_title_changeMasterPWD_info">Replace master password for a new one</string>
    <string name="dialog_resetMasterPWD_title">Are you sure?</string>
    <string name="dialog_resetMasterPWD_message">You\'re about to change the existing master password for a new one that you\'re about to create. This will not affect your saved passwords</string>
    <string name="dialog_erasePWDforever_title">Delete permanently?</string>
    <string name="dialog_erasePWDforever_message">You\'re about to delete this password permanently</string>
    <string name="dialog_eraseAllPWDforever_title">Empty recycle bin?</string>
    <string name="dialog_eraseAllPWDforever_message">You\'re about to empty the recycle bin, this will delete all your passwords permanently</string>
    <string name="recycleBin_hint">All your deleted passwords will show up here. To delete a password hold the password and select the \"Delete\" option</string>
    <string name="toast_error_noUser">This password does not have a username</string>
    <string name="toast_copiedUser">Username copied to clipboard</string>
    <string name="toast_copiedPassword">Password copied to clipboard</string>
    <string name="toast_emptyBin">Recycle bin empty</string>
    <string name="last_modified_date">Last modified date</string>
    <string name="toast_restored_password">Password restored</string>
    <string name="settings_appTheme">App theme</string>
    <string name="sort_nickname_asc">Nickname (A → Z)</string>
    <string name="sort_nickname_desc">Nickname (Z → A)</string>
    <string name="sort_date_asc">Date (newest first)</string>
    <string name="sort_date_desc">Date (oldest first)</string>
    <string name="menuItem_sort">Sort by</string>
</resources>