<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/navigation_arrow_back"
        app:title="@string/toolbar_generatePassword"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/generated_passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:hint="@string/hint_generated_password"
                android:textColor="?attr/colorTertiary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_generate"
                style="@style/app.buttons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"

                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/generate_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/generated_passwordField" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_password_password_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/size"
                android:orientation="horizontal"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_generate">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_password_size"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="4" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/imageButton_add"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/transparent"
                android:elevation="2dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="@+id/new_password_password_layout"
                app:layout_constraintStart_toEndOf="@+id/new_password_password_layout"
                app:layout_constraintTop_toTopOf="@+id/new_password_password_layout"
                app:srcCompat="@drawable/texfield_add" />

            <ImageButton
                android:id="@+id/imageButton_subtract"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:elevation="2dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="@+id/imageButton_add"
                app:layout_constraintStart_toEndOf="@+id/imageButton_add"
                app:layout_constraintTop_toTopOf="@+id/imageButton_add"
                app:layout_constraintVertical_bias="0.6"
                app:srcCompat="@drawable/textfield_remove" />

            <TextView
                android:id="@+id/new_password_error_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_size"
                android:textColor="@color/red"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/new_password_password_layout"
                app:layout_constraintTop_toBottomOf="@+id/new_password_password_layout" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:checked="true"
                android:text="@string/lowercase"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_password_error_size" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:checked="true"
                android:text="@string/uppercase"
                app:layout_constraintStart_toEndOf="@+id/checkBox"
                app:layout_constraintTop_toTopOf="@+id/checkBox" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checked="true"
                android:text="@string/symbols"
                app:layout_constraintEnd_toEndOf="@+id/checkBox"
                app:layout_constraintStart_toStartOf="@+id/checkBox"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checked="true"
                android:text="@string/numbers"
                app:layout_constraintEnd_toEndOf="@+id/checkBox2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/checkBox2"
                app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

            <Button
                android:id="@+id/button_save_generated"
                style="@style/app.buttons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:enabled="false"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_password_error_checkboxes" />

            <TextView
                android:id="@+id/new_password_error_checkboxes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_checkboxes"
                android:textColor="@color/red"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/checkBox"
                app:layout_constraintTop_toBottomOf="@+id/checkBox3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>